Genericize this template project

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = flaskr
+name = backend
 version = 1.0.0
-url = https://flask.palletsprojects.com/tutorial/
+url = 
 license = BSD-3-Clause
-maintainer = Pallets
-maintainer_email = contact@palletsprojects.com
-description = The basic blog app built in the Flask tutorial.
+maintainer = Brian E. Peterson
+maintainer_email = brian.e.peterson@colorado.edu
+description = 
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 
@@ -25,4 +25,4 @@ testpaths = tests
 [coverage:run]
 branch = True
 source =
-    flaskr
+    backend
