--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include LICENSE.rst
-include flaskr/schema.sql
-graft flaskr/static
-graft flaskr/templates
+include backend/schema.sql
+graft backend/static
+graft backend/templates
 graft tests
 global-exclude *.pyc
