--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -14,6 +14,7 @@ packages = find:
 include_package_data = true
 install_requires =
     Flask
+    python-dotenv
 
 [options.extras_require]
 test =
