Try and run yarn start as appropriate on gitpod launch

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,9 +12,9 @@ tasks:
     command: |
       flask run
   - init: |
-      cd saffron_motion && npm install
+      cd saffron_motion && yarn install
     command: |
-      npm start
+      cd saffron_motion && yarn start
 
 vscode:
   extensions:
