--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ stages:          # List of stages for jobs, and their order of execution
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
-    - pip install -e backend
+    - python -m pip install -e backend
     - flask init-db
     - cd saffron_motion && yarn install
     - echo "Compile complete."
