--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@
 #
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
-image: python3.9-nodejs16-alpine
+image: python-nodejs:latest
 
 stages: # List of stages for jobs, and their order of execution
   - build
@@ -32,7 +32,7 @@ unit-test-job: # This job runs in the test stage.
   stage: test # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 5-10 seconds."
-    - yarn test
+    - npm test
     - echo "Code coverage is not established."
 
 lint-test-job: # This job also runs in the test stage.
