--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ lint-test-job: # This job also runs in the test stage.
   stage: test # It can run at the same time as unit-test-job (in parallel).
   script:
     - echo "Linting code... "
-    - echo "Linter not established.
+    - echo "Linter not established."
     - echo "No lint issues found."
 
 deploy-job: # This job runs in the deploy stage.
