--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ unit-test-job: # This job runs in the test stage.
   stage: test # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 5-10 seconds."
-    - cd saffron_motion && yarn test
+    - cd saffron_motion && yarn install && yarn test
     - echo "Code coverage is not established."
 
 lint-test-job: # This job also runs in the test stage.
