--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,9 +12,14 @@ tasks:
     command: |
       flask run
   - init: |
-      cd saffron_motion && yarn install
+       cd saffron_motion && yarn install 
+      
     command: |
       cd saffron_motion && yarn start
+
+# getting cypress available
+# apt update && DEBIAN_FRONTEND=noninteractive apt install -y -q xvfb libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb 
+
 
 vscode:
   extensions:
