--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,6 +70,6 @@ deploy-job: # This job runs in the deploy stage.
     url: https://saffron-motion.vercel.app/
   script:
     - echo "Deploying application..."
-    - git remote add self https://gitlab-ci-token:$PROJECT_ACCESS_TOKEN@gitlab.com/saffron-motion.git
+    - git remote add self https://gitlab-ci-token:$SM_ACCESS_TOKEN@gitlab.com/saffron-motion.git
     - git push self prod # Vercel watches this branch
     - echo "Deploy target not established."
