--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,12 @@
 #
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
+workflow:
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ /[skip-ci]$/
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "push"'
+
 image: nikolaik/python-nodejs:latest
 
 stages: # List of stages for jobs, and their order of execution
